--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,4 @@
+/* Sketch Area */
 #wrapper {
 	display: block;
 	margin: 0 auto;
@@ -32,5 +33,11 @@
 }
 
 .units_leave {
-	background-color: #666;
+	background-color: #333;
+}
+
+/* Settings Area */
+#settings {
+	display: block;
+	text-align: center;
 }
