--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,19 +1,29 @@
 /* Sketch Area */
+body {
+	text-align: center;
+}
+
+div{
+	margin: 0;
+	padding: 0;
+}
+
 #wrapper {
 	display: block;
 	margin: 0 auto;
 	padding: 0;
 	height: 500px;
-	width: auto;
+	width: 500px;
 	background-color: midnightblue;
+	font-size: 0;
 }
 
-.rows {
-	display: block;
+.box {
+	display: none;
 	margin: 0;
 	padding: 0;
-	height: 16px;
-	width: auto;
+	height: 500px;
+	width: 500px;
 	background-color: crimson;
 	text-align: center; /* Make all element in it to center.*/
 }
@@ -22,10 +32,8 @@
 	display: inline-block;
 	margin: 0;
 	padding: 0;
-	height: 16px;
-	width: 16px;
 	background-color: teal;
-	border: 0.5px dotted pink;
+/*	border: 0.5px dotted pink; */
 }
 
 .units_enter {
